--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,19 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.idea/
+**/.idea
+.DS_Store
+**/DS_Store
 
 # Go workspace file
 go.work
 go.work.sum
+**/go.sum
+go.sum
 
 # env file
 .env
+
+tmp/
+.tmp/
